--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -26,6 +26,7 @@
           <p>Project ELIMIN8 was started with one goal in mind: to reduce waste and starvation. We are an ever-growing non-profit branch organization under CastSD that strives to make a change in our communities. We are mainly located in San Diego, California but have expanded to other areas across America and are looking to expand throughout the world as well.</p>
         </div>
       </div>
+      <div class="break"></div> <!-- break to a new row -->
 
       <div id="kard2" class="kard">
         <div class="title">
@@ -35,6 +36,7 @@
         <img id="slide-image1" src="/static/assets/placehdoler.PNG">
         <img id="slide-image2" src="/static/assets/placehdoler.PNG"> 
       </div>
+      <div class="break"></div> <!-- break to a new row -->
 
       <div id="kard3" class="kard">
         <div class="title">
@@ -44,6 +46,7 @@
         <img id="slide-image3" src="/static/assets/placehdoler.PNG"> 
         <img id="slide-image4" src="/static/assets/placehdoler.PNG"> 
       </div>
+      <div class="break"></div> <!-- break to a new row -->
 
 
       <div id="kard4" class="kard">
