images gone for mobile/small screens

--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -12,32 +12,8 @@ html {
         margin: auto;
         padding-right: 5rem;
     }
-    #slide-image1 {
-        display: none;
-        /* position: absolute;
-        top: 60%;
-        left: 35%;
-        width: 420px;
-        height: 340px;
-        margin-top: 90rem; 
-        transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
-        padding: 10px;
-        background-color: #ffffff; 
-        border-radius: 15px;
-        box-shadow: 0px 25px 40px #1687d933; */
-      }
-    #slide-image2 {
-        position: absolute;
-        top: 60%;
-        left: 21%;
-        width: 520px;
-        height: 450px;
-        margin-top: 50rem;
-        padding: 10px;
-        background-color: #ffffff; 
-        border-radius: 15px;
-        box-shadow: 0px 25px 40px #1687d933;
-        transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
+    #slide-image1, #slide-image2, #slide-image3, #slide-image4 {
+        visibility: hidden;
     }
     .break {
         display: block;
