--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,6 +24,7 @@
     background-size:100% 100%;
     }
     body {
+        color: black !important;
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
             background-size: 400% 400%;
