--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -83,7 +83,7 @@ h10 {
     padding:50px 0;
     color:#282d32;
     background-color:#ffffff;
-    border-top: 1px solid #141414;
+    /* border-top: 1px solid #141414; */
 }
 
 .footer-white h3 {
