--- a/static/styles/founders.css
+++ b/static/styles/founders.css
@@ -35,6 +35,7 @@ body
     height: 300px;
     perspective: 1000px;
     margin-bottom:7rem;
+    border-radius: 15px !important
 }
 
 .flip-card-inner {
@@ -57,6 +58,7 @@ body
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    box-shadow: 0px 25px 40px #1687d933;
 }
 
 .flip-card-front {
