--- a/static/styles/partners.css
+++ b/static/styles/partners.css
@@ -88,7 +88,8 @@ body
     width: 100%;
 } */
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 25px 40px #1687d933;
+    border-radius: 15px !important;
     padding: 30px;
     text-align: center;
     background-color: #f1f1f1;
