--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -17,16 +17,20 @@
         border-bottom: 3px solid transparent;
     }
     .nav-link:hover {
-        border-bottom: 3px solid #89CFF0;
+        border-bottom: 3px solid #87baf5;
     }
     .dropdown-menu {
-        background-color: #e7ffff;
+        background-image: linear-gradient(to right, rgb(127, 127, 245) , rgb(169, 232, 253));
         transform: translateY(-2px);
-        box-shadow: 0px 10px 10px 3px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 25px 40px #1687d933;
+        border-radius: 15px !important;
         visibility: visible;
         opacity: 1;
         transform: translateY(0px);
         z-index:999
+    }
+    .nav {
+        color: black
     }
 
 </style>
