--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -6,6 +6,10 @@ html {
     box-shadow: 0px 25px 40px #1687d933;
     border-radius: 15px;
 }
+.carousel-control-next,
+.carousel-control-prev {
+    filter: invert(100%);
+}
 .bgimg-1 {
     /* background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
     animation: gradient 10s ease infinite;
