--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -17,10 +17,10 @@
         border-bottom: 3px solid transparent;
     }
     .nav-link:hover {
-        border-bottom: 3px solid #87baf5;
+        border-bottom: 3px solid #00d9ff;
     }
     .dropdown-menu {
-        background-image: linear-gradient(to right, rgb(127, 127, 245) , rgb(169, 232, 253));
+        background-image: linear-gradient(to right, rgb(156, 156, 238) , rgb(169, 232, 253));
         transform: translateY(-2px);
         box-shadow: 0px 25px 40px #1687d933;
         border-radius: 15px !important;
@@ -29,12 +29,13 @@
         transform: translateY(0px);
         z-index:999
     }
-    .nav {
-        color: black
+    #navbar {
+        color: black !important;
+        z-index:999;
     }
 
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-* sticky" id="navbar" style="font-family: 'Poppins', sans-serif">
+<nav class="navbar navbar-expand-lg navbar-light bg-* sticky" id="navbar" style="font-family: 'Poppins', sans-serif;">
     <div class="container-fluid">
     <a class="navbar-brand active" href="{{url_for('index')}}">
         <img src="\static\assets\image_6483441-removebg-preview.png" width="75rem" height="50rem" class="center" alt="">
