--- a/templates/getinvolved/login.html
+++ b/templates/getinvolved/login.html
@@ -26,7 +26,7 @@
     </div>
     <h1 id="h1padding">Log In</h1>
 <container>
-<center>
+<center class="mobile">
     <h3>Welcome back!</h3>
 <div class="form-group">
     <input style="height:3rem" type="email" class="form-control" id="inputEmail" placeholder="Email">
