--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -23,7 +23,14 @@ body {
     animation: gradient 10s ease infinite;
     height: 100vh;
 } */
-
+@media only screen and (max-width: 800px) {
+    body {
+        overflow-x: scroll
+    }
+    h1 {
+        padding-left: 55%
+}
+}
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
