--- a/static/styles/register.css
+++ b/static/styles/register.css
@@ -21,6 +21,14 @@ h1 {
     margin-top:2rem;
     margin-bottom:5rem;
 } 
+@media only screen and (max-width: 800px) {
+    body {
+        overflow-x: scroll
+    }
+    h1 {
+        padding-left: 75%
+}
+}
 h3 {
     margin-bottom:5rem
 }
