--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -290,7 +290,7 @@ font-size:1.5rem
         }
         }
 
-            @media (min-width: 800px) {
+            @media only screen and (max-width: 1000px) {
             .Venn::after {
                 content: "";
                 display: block;
@@ -478,8 +478,8 @@ font-size:1.5rem
         .Venn .circle > span {
             width: calc(58.5vw * var(--venn-width-mult));
             height: calc(58.5vw * var(--venn-width-mult));
-            overflow-x: wrap;
-            overflow-y: wrap
+            /* overflow-x: wrap;
+            overflow-y: wrap */
         }
         .Venn .three > span {
             width: calc(58.5vw * var(--venn-width-mult));
