--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -88,6 +88,9 @@
         </div> -->
         </div>
     <div>
+        <center>
+        <img class="definingelimin8" src="static\assets\vennhd-removebg.PNG">
+    </center>
             <article class="Venn" style="z-index:999">
               <div class="circle one">
                 <span></span>
