mobile img test

--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -89,7 +89,7 @@
         </div>
     <div>
         <center>
-        <img class="definingelimin8" src="static\assets\vennhd-removebg.PNG">
+        <img src="static/assets/vennhd-removebg.png" alt="defining elimin8" class="definingelimin8" width="100%"" height="100%">
     </center>
             <article class="Venn" style="z-index:999">
               <div class="circle one">
