--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -138,8 +138,8 @@ h7 {
     box-shadow: 0px 25px 40px #1687d933;
 } 
 #bottom { 
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
     display: flex;
     text-align: center;
 }
@@ -280,6 +280,10 @@ font-size:1.5rem
     height: 100%;
     display: none
 }
+.carousel {
+    padding-top: 25rem;
+    padding-bottom: 25rem
+}
                 main {
         width: calc(50% * var(--venn-width-mult));
         margin: 0 auto;
@@ -299,10 +303,19 @@ font-size:1.5rem
                 .circle {
                     display: none
                 }
+                .Venn {
+                    display: none
+                }
+                #bottom {
+                    padding-top: -20%;;
+                    margin-top: 0
+                }
                 .definingelimin8 {
                     width: 100%;
                     height: 100%;
-                    display: block
+                    display: block;
+                    margin-bottom: 0;
+                    padding-bottom: 0
                 }
             .Venn::after {
                 content: "";
