--- a/static/styles/contact.css
+++ b/static/styles/contact.css
@@ -15,6 +15,7 @@ body {
     background-size:100% 100%;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden
 }
 
 @keyframes gradient {
