--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -30,6 +30,8 @@
             <div class="card .col-xs-6 .col-md-4">
                 <center>
                 <img id="panera" src="static/assets/panera1.PNG">
+                </center>
+                <center>
                     <a href="https://www.panerabread.com/en-us/home.html">
                     <h9>Panera Bread</h9>
                     </a>
@@ -41,6 +43,8 @@
             <div class="card .col-xs-6 .col-md-4">
                 <center>
                 <img id="jimbos" src="static/assets/jimbos.jpg">
+                </center>
+                <center>
                     <a href="https://jimbos.com/">
                     <h9>Jimbo's</h9>
                     </a>
@@ -52,6 +56,8 @@
             <div class="card .col-xs-6 .col-md-4">
                 <center>
                 <img id="producegood" src="static/assets/producegood.jpg">
+                </center>
+                <center>
                     <a href="https://producegood.org/">
                     <h9>ProduceGood</h9>
                     </a>
@@ -64,8 +70,22 @@
         <div class="card .col-xs-6 .col-md-4">
             <center>
                 <img id="foundry" src="static/assets/foundrychurch1.jpg">
+            </center>
+            <center>
                 <a href="http://thefoundryescondido.com/">
-                <h9>The FCC</h9>
+                    <h9>The Foundry Community Church</h9>
+                </a>
+        </center>
+        </div>
+    </div>
+    <div class="column">
+        <div class="card .col-xs-6 .col-md-4">
+            <center>
+                <img id="jimbos" src="static/assets/placehdolerresized.PNG">
+            </center>
+            <center>
+            <a>
+                <h9>Lorem</h9>
                 </a>
             </center>
         </div>
@@ -73,17 +93,14 @@
     <div class="column">
         <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="jimbos" src="static/assets/placehdolerresized.PNG">
-                <h9>Lorem</h9>
-            </center>
-        </div>
-    </div>
-    <div class="column">
-        <div class="card .col-xs-6 .col-md-4">
-            <center>
                 <img id="producegood" src="static/assets/placehdolerresized.PNG">
-                <h9>Ipsum</h9>
+                
             </center>
+            <center>
+                <a>
+                    <h9>Ipsum</h9>
+                    </a>
+                </center>
         </div>
     </div>
 </div>
