change back for mobile formatting

--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -73,7 +73,7 @@
             </center>
             <center>
                 <a href="http://thefoundryescondido.com/">
-                    <h9>The Foundry Community Church</h9>
+                    <h9>The FCC</h9>
                 </a>
         </center>
         </div>
