--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -57,16 +57,16 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block" height="700px" width="100%" src="/static/assets/placehdoler.PNG" alt="First slide">
+                    <img class="d-block" height="700px" width="100%" src="/static/assets/posing.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" height="700px" width="100%" src="/static/assets/placehdoler.PNG" alt="Second slide">
+                    <img class="d-block" height="700px" width="100%" src="/static/assets/lifting.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" height="700px" width="100%" src="/static/assets/placehdoler.PNG" alt="Third slide">
+                    <img class="d-block" height="700px" width="100%" src="/static/assets/pushing.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" height="700px" width="100%" src="/static/assets/placehdoler.PNG" alt="Fourth slide">
+                    <img class="d-block" height="700px" width="100%" src="/static/assets/giving.jpg" alt="Fourth slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="background-color: transparent">
