why is there a period

--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -48,7 +48,7 @@
 
       <div id="kard4" class="kard">
         <div class="title">
-          <h1>How can I get involved?</h1>.
+          <h1>How can I get involved?</h1>
           <p>To become a member, you can register through our <a href="{{ url_for('register') }}">Register Page</a>. After creating an account, we will be in contact with you as soon as possible in order to set up a connection within your area, and you can start helping your community while earning volunteer hours. For donations, please refer to the <a href="{{ url_for('contact') }}">Donation Page</a>. For your unanswered questions, lingering curiosity, and anything in general, please refer to our <a href="{{ url_for('contact') }}">Contact Page</a>.</p>
         </div>
       </div>
