--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -57,7 +57,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block" height="700px" width="100%" src="/static/assets/posing.jpg" alt="First slide">
+                    <img class="d-block" height="700px" width="100%" src="/static/assets/posingresized2.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block" height="700px" width="100%" src="/static/assets/lifting.jpg" alt="Second slide">
