--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -32,8 +32,8 @@
           <h1>What does Project ELIMIN8 do?</h1>
           <p>Members of Project ELIMIN8 pick up surplus food and donate it to organizations weekly. We set up relations between organizations that give us surplus food and donate to organizations that are in need of it. That way, we are able to help both causes with maximal effectiveness.</p>
         </div>
-        <img id="slide-image1" src="/static/assets/placehdoler.PNG">
-        <img id="slide-image2" src="/static/assets/placehdoler.PNG"> 
+        <img id="slide-image1" src="/static/assets/breads.jpg">
+        <img id="slide-image2" src="/static/assets/smile.jpg"> 
       </div>
 
       <div id="kard3" class="kard">
@@ -41,8 +41,8 @@
           <h1>Why should I get involved?</h1>
           <p>You can help our community mitigate food waste while receiving volunteer hours for your efforts by simply becoming one of our drivers. As a driver, you will pick up food from a store or restaurant partner and drop off food to a local charitable organization partner. Your contributions would be greatly appreciated.</p>
         </div>
-        <img id="slide-image3" src="/static/assets/placehdoler.PNG"> 
-        <img id="slide-image4" src="/static/assets/placehdoler.PNG"> 
+        <img id="slide-image3" src="/static/assets/jimbostrunk.jpg"> 
+        <img id="slide-image4" src="/static/assets/marypose.jpg"> 
       </div>
 
 
