--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -25,7 +25,7 @@
 <div class="flip-card">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-            <img src="static/assets/fixedjuncaption.PNG" alt="Avatar" style="width:300px;height:300px">
+            <img src="static/assets/IMG-8837.jpg" alt="Avatar" style="width:300px;height:300px">
         </div>
         <div class="flip-card-back">
             <p>Methods of contact:</p>
@@ -39,14 +39,14 @@
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="static/assets/fixedalexcaption.PNG" alt="Avatar" style="width:300px;height:300px">
+                <img src="static/assets/akegh.jpg" alt="Avatar" style="width:300px;height:300px">
             </div>
             <div class="flip-card-back">
                 <p>Methods of contact:</p>
                 <p>858-914-6016</p>
                 <p>alexison.pan@gmail.com</p>
                 <hr>
-                <p>"I have no vision"</p>
+                <p>"I hope to positively impact the community around me through mitigating food waste."</p>
             </div>
         </div>
     </div>
@@ -55,14 +55,14 @@
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="static/assets/captionjustin.PNG" alt="Avatar" style="width:300px;height:300px;">
+                <img src="static/assets/IMG-8835.jpg" alt="Avatar" style="width:300px;height:300px;">
             </div>
             <div class="flip-card-back">
                 <p>Methods of contact:</p>
                 <p>858-945-1445</p>
-                <p>awesomejustin04@gmail.com</p>
+                <p>jjustinnguyen04@gmail.com</p>
                 <hr>
-                <p>"I envision Project ELIMN8 to be a project that turns not only our community, but many other communities into places where the problem of starvation exists only in the past."</p>
+                <p>"I envision Project ELIMIN8 to turn not only our community, but many others into places where the problem of starvation exists only in the past."</p>
             </div>
         </div>
     </div>
