--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -81,11 +81,11 @@
     <div class="column">
         <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="jimbos" src="static/assets/placehdolerresized.PNG">
+                <img id="jimbos" src="static/assets/cutecakesresized.PNG">
             </center>
             <center>
-            <a>
-                <h9>Lorem</h9>
+                <a href="https://www.cutecakes.com/">
+                    <h9>Cute Cakes</h9>
                 </a>
             </center>
         </div>
@@ -93,13 +93,12 @@
     <div class="column">
         <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="producegood" src="static/assets/placehdolerresized.PNG">
-                
+                <img id="producegood" src="static/assets/bluepragersresized.png">
             </center>
             <center>
-                <a>
-                    <h9>Ipsum</h9>
-                    </a>
+                <a href="https://www.pragerbrothers.com/">
+                    <h9>Prager Bros</h9>
+                </a>
                 </center>
         </div>
     </div>
