--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -55,16 +55,7 @@
                     <a class="dropdown-item" href={{ url_for('founders') }}>Founders</a>
                 </div>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Get Involved
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <!-- <a class="dropdown-item" href="{{ url_for('getinvolved') }}">Get Involved</a> -->
-                    <a class="dropdown-item" href="{{ url_for('login') }}">Log In</a>
-                    <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
-                </div>
-            </li>
+            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
             <a class="nav-link" href="{{ url_for('donation') }}">Donation Form</a>
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </div>
