--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -25,7 +25,7 @@
 <div class="flip-card">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-            <img src="static/assets/IMG-8837.jpg" alt="Avatar" style="width:300px;height:300px">
+            <img src="static/assets/juns.jpg" alt="Avatar" style="width:300px;height:300px">
         </div>
         <div class="flip-card-back">
             <p>Methods of contact:</p>
