--- a/templates/register.html
+++ b/templates/register.html
@@ -19,8 +19,8 @@
 </head>
 {% endblock %}
 {% block body %}
-<container>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeL7iH1XSlsRFimfZqBEpSzt4LjWt3jA9vItZzq9CJfiTu-QA/viewform?embedded=true" scrolling="no" width="640" height="1550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> 
+<container style="height:145rem">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeL7iH1XSlsRFimfZqBEpSzt4LjWt3jA9vItZzq9CJfiTu-QA/viewform?embedded=true" scrolling="no" width="640" height="1750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> 
 </container>
 {% endblock %}
 </html>
