cute cakes image test

--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -81,7 +81,7 @@
     <div class="column">
         <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="jimbos" src="static/assets/cutecakesresized.PNG">
+                <img id="jimbos" src="static/assets/cutecakesresized.png">
             </center>
             <center>
                 <a href="https://www.cutecakes.com/">
