vision statement change alex

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -46,7 +46,7 @@
                 <p>858-914-6016</p>
                 <p>alexison.pan@gmail.com</p>
                 <hr>
-                <p>"I hope to positively impact the community around me through mitigating food waste."</p>
+                <p>"I envision Project ELIMIN8 as a way to positively impact the community around me through mitigating food waste."</p>
             </div>
         </div>
     </div>
