--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -93,11 +93,11 @@
     <div class="column">
         <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="producegood" src="static/assets/bluepragersresized.png">
+                <img id="producegood" src="static/assets/scakes.png">
             </center>
             <center>
-                <a href="https://www.pragerbrothers.com/">
-                    <h9>Prager Bros</h9>
+                <a href="https://susiecakes.com/">
+                    <h9>Susie Cakes</h9>
                 </a>
                 </center>
         </div>
