--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
     <link rel="stylesheet" href="/static/assets/scss">
     <link rel="icon" href="\static\assets\image_6483441-removebg-preview.png">
-    <title>| Project ELIMIN8 |</title>
+    <title>Project ELIMIN8</title>
     <link rel="shortcut icon" href="\static\assets\image_6483441-removebg-preview.png">
 
 
