titles will they fix in browser now

--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -4,7 +4,7 @@
 {% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Project ELIMIN8|Partners</title>
+    <title>Our Partners</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/partners.css') }}">
     <style>
         body {
