--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 {% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Project ELIMIN8|Contact</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/contact.css') }}">
     <style>
         body {
