--- a/templates/donation.html
+++ b/templates/donation.html
@@ -4,7 +4,7 @@
 {% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Project ELIMIN8|Donation Form</title>
+    <title>Donation Form</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/donation.css') }}">
     <style>
         body {
