--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Project ELIMIN8|Register</title>
+    <title>Register</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/donation.css') }}">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
     <style>
