--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -4,7 +4,7 @@
 {% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Project ELIMIN8|About</title>
+    <title>About Project ELIMIN8</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/about.css') }}">
     <style>
       body {
