--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -4,7 +4,7 @@
 {% block head %}
     <head>
         <meta charset="UTF-8">
-        <title>Project ELIMIN8|Founders</title>
+        <title>Our Founders</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/founders.css') }}">
         <style>
             body {
